2 paragraphs on software systems and infrastructure.

--- a/oed-vision.tex
+++ b/oed-vision.tex
@@ -688,6 +688,26 @@ experiments.
 
 \section{Software System for High-Performance Optimal Experimental Design}
 
+The above science drivers span a wide range of domains as well as
+computational requirements. In addition to traditional high-performance
+computing requirements for computational kernels (linear algebra and
+differential equation solvers in strongly correlated materials, molecular
+dynamics for free energy calculations), there are requirements for (i) real-
+time data processing (synthesis by assembly), (ii) development and integration
+of high-performance machine learning algorithms with simulations (most science
+drivers), and (iii) the need to integrate diverse capabilities into scalable,
+sophisticated and extensible workflows. These capabilities must span a range
+of diverse software systems and evolving heterogeneous architectures and HPC
+platforms.
+
+Whereas no single science driver will require all capabilities simultaneously,
+in order to encourage interoperability and reuse, the software systems for
+high-performance optimal experimental design must be architected and
+implemented to support diverse usage modes, different combinations of
+capabilities with minimal customization, refactoring or new development.
+Delivering software system with these capabilities is as much a research
+question as an engineering challenge.
+
 \section{Concluding Remarks}
 
 \newpage
